[project]
name = "image-categorizer"
version = "0.1.0"
description = "Image categorization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "psutil>=5.9.0",
    "accelerate>=0.32.0",
    "openai>=1.17.0",
    "huggingface_hub>=0.23.0",
]
