[project]
name = "image-categorizer"
version = "0.1.0"
description = "Image categorization"
readme = "README.md"
requires-python = ">=3.9.19"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=11.1.0",
    "torch>=2.2.0,<2.3.0",
    "transformers>=4.36.0,<4.40.0",
    "numpy<2.0.0",
    "psutil>=5.9.0",
    "accelerate>=0.25.0,<0.33.0",
    "openai>=1.17.0",
    "huggingface_hub>=0.19.0,<0.24.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
exclude = ["trash", "activate", "fix_scripts", "test_scripts"]
